scenarios/scenario-01/ratings-probe.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
        - name: ratings
          readinessProbe:
            httpGet:
              path: /ratings/0
              port: 9080
            initialDelaySeconds: 120
            periodSeconds: 120
          image: docker.io/istio/examples-bookinfo-ratings-v1:1.18.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 9080
