scenarios/scenario-01/ratings-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-api-vs
  namespace: bookinfo-prod
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /ratings
    route:
    - destination:
        host: ratings
        port:
          number: 9080
