scenarios/scenario-01/virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
  namespace: sock-shop
spec:
  hosts:
    - catalogue
  http:
  - route:
    - destination:
        host: catalogue  # Replace with your service name
        port:
          number: 80
